import org.apache.tools.ant.filters.*

buildscript {
    repositories {
        jcenter()
    }
    dependencies {
        classpath 'com.github.jengelman.gradle.plugins:shadow:5.2.0'
    }
}

plugins {
    id 'java'
    id 'application'
    id 'jacoco'
    id 'com.github.johnrengelman.shadow'
    id 'io.franzbecker.gradle-lombok'
    id 'com.adarshr.test-logger'
}

repositories {
    maven { url 'https://jitpack.io' }
}

applicationDefaultJvmArgs = ["--enable-preview"]

apply from: file("${rootDir}/dependencies.gradle")
dependencies {
    implementation project(':diagram')
    implementation(deps.owlapi)
    implementation(deps.vavr)
    implementation(deps.jcommander)
    implementation(deps.picocli)
    annotationProcessor(deps.picocli_codegen)

    annotationProcessor 'com.github.bsideup.jabel:jabel-javac-plugin:0.2.0'

    // Override transitive dependency versions due to features
    implementation(deps.caffeine)

    // Override transitive dependency versions due to vulns
    implementation(deps.guava)
    implementation(deps.jackson_databind)
    implementation(deps.rdf4j_util)
    implementation(deps.rdf4j_rio_rdfxml)
    implementation(deps.rdf4j_rio_trix)
    implementation(deps.httpclient)
    implementation(deps.commons_codec)

    // Test
    testImplementation(deps.junit_jupiter_api)
    testImplementation(deps.junit_jupiter_params)
    testImplementation(deps.commons_io)
    testImplementation(deps.assertj)
    testImplementation(deps.classgraph)
    testRuntimeOnly(deps.junit_jupiter_engine)
}

shadowJar {
    archiveBaseName = 'owl-cli'
    archiveClassifier = null
}

processResources {
    filter ReplaceTokens, tokens: [
        "application.version": version,
        "application.buildDate": new Date().format("yyyy-MM-dd HH:mm:ss")
    ]
}

compileJava {
    options.compilerArgs += ["--release", "11", "-Aproject=${project.group}/${project.name}"]
    sourceCompatibility = 13
    targetCompatibility = 11
}

compileTestJava {
    options.compilerArgs += ["--release", "11"]
    sourceCompatibility = 13
    targetCompatibility = 11
}

test {
    useJUnitPlatform()
    maxHeapSize = '1G'
    ignoreFailures = false
    failFast = true

    filter {
        includeTestsMatching "*Test"
    }
}

mainClassName = 'de.atextor.owlcli.OWLCLI'
